[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-legends"
version = "0.1.0"
description = "A terminal-based RPG game in Python"
authors = [
    { name = "Yasin Sabanoglu" }
]
requires-python = ">=3.10"

[project.scripts]
terminal-legends = "terminal_legends.__main__:main"
